# video-content-generation-ai

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  analyze.py  audio.py  cli.py  config.py  db.py  diarize.py  dub.py  export.py  fuse.py  i18n.py  ingest.py  jobs.py  lifecycle.py  render.py  sentences.py  supercut.py  transcribe.py  tui.py  visual.py
brand/: brand.json
prompts/: analyze_system.md  supercut_assemble.md  supercut_discover.md  supercut_review.md
