[project]
name = "long-to-shorts"
version = "0.1.0"
description = "Uzun YouTube videolarından shorts / YouTube bölümü / podcast bölümü önerileri üreten yerel-öncelikli AI aracı"
requires-python = ">=3.11"
dependencies = [
    # Faz 0-1: çekirdek
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.0",
    # Faz 3: akıl yürütme
    "anthropic>=0.40",
    "pillow>=12.2.0",
]

# Ağır ML bağımlılıkları faz faz eklenir (kurulumu uzun sürdüğü için ayrı tutuldu).
# Faz 2 (transkript): uv add mlx-whisper
# Faz 4 (ses):        uv add librosa silero-vad soundfile
# Faz 5 (görüntü):    uv add scenedetect opencv-python paddleocr
[project.optional-dependencies]
transcribe = ["mlx-whisper>=0.4"]
audio = ["librosa>=0.10", "soundfile>=0.12"]
visual = ["scenedetect>=0.6", "opencv-python>=4.9"]

[project.scripts]
l2s = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
